# comfyui-advanced-monitor

./: .gitignore  README.md  __init__.py  monitor.py  pyproject.toml
.github/workflows/: publish.yml
web/: monitor.js
